--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://HawaMariah.github.io/Fit-Buddy",
+  "homepage":"https://hawamariah.github.io/Fit-Buddy/",
   "name": "fitness",
   "version": "0.1.0",
   "private": true,
@@ -17,7 +17,7 @@
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.8",
     "sweetalert2": "^11.7.20",
     "web-vitals": "^2.1.4"
   },
@@ -49,6 +49,5 @@
   },
   "devDependencies": {
     "gh-pages": "^5.0.0"
-   
   }
 }
